fix: list overflowing

--- a/src/components/Layout/Sidebar/ListFilter.module.css
+++ b/src/components/Layout/Sidebar/ListFilter.module.css
@@ -1,11 +1,16 @@
 .task-list {
-  margin: 2em 2em;
+  margin: 2em 2em 7rem;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 .task-list__header {
   font-size: 1.6em;
   font-weight: bold;
   color: var(--secondary-text-color);
+  /* flex-grow: auto; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -29,6 +34,9 @@
 
 .task-list .lists {
   color: var(--primary-text-color);
+  overflow: auto;
+  max-height: 100%;
+  flex-grow: 1;
 }
 
 .task-list .lists.collapsed {
