--- a/src/components/Layout/Sidebar/Sidebar.module.css
+++ b/src/components/Layout/Sidebar/Sidebar.module.css
@@ -4,6 +4,8 @@
   max-width: 250px;
   width: 100%;
   height: 100vh;
+  display: flex;
+  flex-flow: column;
 }
 
 .sidebar__logo-container {
